--- a/main.css
+++ b/main.css
@@ -39,6 +39,12 @@
     stroke-width: 3;
   }
 
+  .linea-inicio {
+    fill: none;
+    stroke: greenyellow;
+    stroke-width: 3;
+  }
+
   text {
     text-anchor: middle;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
