--- a/main.css
+++ b/main.css
@@ -1,68 +1,71 @@
 @font-face {
-    font-family: "color-emoji";
-    src: local("Apple Color Emoji"),
-      local("Segoe UI Emoji"),
-      local("Segoe UI Symbol"),
-      local("Noto Color Emoji");
-  }
+  font-family: "color-emoji";
+  src: local("Apple Color Emoji"), local("Segoe UI Emoji"),
+    local("Segoe UI Symbol"), local("Noto Color Emoji");
+}
 
-  svg {
-    display: block;
-  }
+#app {
+  display: flex;
+}
 
-  .circulo {
-    fill: none;
-    stroke: black;
-    stroke-width: 1;
-  }
+svg {
+  display: block;
+}
 
-  .circulo2 {
-    fill: none;
-    stroke: black;
-    stroke-width: 2;
-  }
+.circulo {
+  fill: none;
+  stroke: black;
+  stroke-width: 1;
+}
 
-  .linea {
-    fill: none;
-    stroke: black;
-  }
+.circulo2 {
+  fill: none;
+  stroke: black;
+  stroke-width: 2;
+}
 
-  .linea2 {
-    fill: none;
-    stroke: black;
-    stroke-width: 2;
-  }
+.linea {
+  fill: none;
+  stroke: black;
+}
 
-  .linea-hoy {
-    fill: none;
-    stroke: red;
-    stroke-width: 3;
-  }
+.linea2 {
+  fill: none;
+  stroke: black;
+  stroke-width: 2;
+}
 
-  .linea-inicio {
-    fill: none;
-    stroke: greenyellow;
-    stroke-width: 3;
-  }
+.linea-hoy {
+  fill: none;
+  stroke: red;
+  stroke-width: 3;
+}
 
-  text {
-    text-anchor: middle;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  }
+.linea-inicio {
+  fill: none;
+  stroke: greenyellow;
+  stroke-width: 3;
+}
 
-  .numeros {
-    font-size: 14px;
-  }
+text {
+  text-anchor: middle;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 
-  .fases {
-    font-size: 36px;
-    font-family: "color-emoji";
-  }
+.numeros {
+  font-size: 14px;
+}
 
-  .signos {
-    font-size: 48px;
-  }
+.fases {
+  font-size: 36px;
+  font-family: "color-emoji";
+}
 
-  .ingrePlanetas {
-    font-size: 12px;
-  }
+.signos {
+  font-size: 48px;
+}
+
+.ingrePlanetas {
+  font-size: 12px;
+}
