--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+body {
+  background: #000;
+  color: rgb(218, 183, 93);
+}
+
 @font-face {
   font-family: "color-emoji";
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"),
